--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,60 +1,81 @@
-  version: 2.1
+version: 2.1
 
-  orbs:
+orbs:
   node: circleci/node@4.1.0
-  
-#     steps:
-#       - checkout
-#       - node/install-packages
-#       - run: npm install
-#       - run: npm test
-#   deploy:
-#     docker:
-#       - image: cimg/node:16.13.2
-#     steps:
-#       - checkout
-#       - node/install-packages
-#       - run: npm install
-#       - deploy:
-#           name: Deploy to Production
-#           command: npm start
-
-# workflows:
-#   version: 2.1
-#   build_and_deploy:
-#     jobs:
-#       - build
-#       - deploy:
-#           requires:
-#             - build
-#           filters:
-#             branches:
-#               only: main
-
-# on:
-#   pull_request:
 
 jobs:
-build:
+  build:
     docker:
       - image: cimg/node:16.13.2
-  tests:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-
+          node-version: 18.x
       - name: Install dependencies
         run: npm ci
-
       - name: Run tests
         run: npm test
+
+#   version: 2.1
+
+#   orbs:
+#   node: circleci/node@4.1.0
+  
+# #     steps:
+# #       - checkout
+# #       - node/install-packages
+# #       - run: npm install
+# #       - run: npm test
+# #   deploy:
+# #     docker:
+# #       - image: cimg/node:16.13.2
+# #     steps:
+# #       - checkout
+# #       - node/install-packages
+# #       - run: npm install
+# #       - deploy:
+# #           name: Deploy to Production
+# #           command: npm start
+
+# # workflows:
+# #   version: 2.1
+# #   build_and_deploy:
+# #     jobs:
+# #       - build
+# #       - deploy:
+# #           requires:
+# #             - build
+# #           filters:
+# #             branches:
+# #               only: main
+
+# # on:
+# #   pull_request:
+
+# jobs:
+# build:
+#     docker:
+#       - image: cimg/node:16.13.2
+#   tests:
+#     runs-on: windows-latest
+#     strategy:
+#       matrix:
+#         node-version: [18.x]
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Run tests
+#         run: npm test
