--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,11 @@ jobs:
     docker:
       - image: cimg/node:16.13.2
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Use Node.js 18.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 18.x
-      - name: Install dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm test
+      - checkout
+      - setup_node:
+          node_version: 18.x
+      - run: npm ci
+      - run: npm test
 
 #   version: 2.1
 
